# thor-backend

./: Dockerfile  fly.toml  gunicorn.conf.py  pyproject.toml
apps/core/: constants.py
apps/food/: models.py  schemas.py  views.py
apps/food/migrations/: 0001_initial.py
apps/line/: apps.py  filters.py  models.py  schemas.py  services.py  views.py
apps/line/migrations/: 0001_initial.py  0002_alter_foodprocessline_process.py  0002_foodprocessline_bom.py  0003_alter_foodprocessline_food_and_more.py
apps/line_step/: apps.py  filters.py  models.py  schemas.py  views.py
apps/line_step/migrations/: 0001_initial.py  0002_remove_foodprocesslinestep_order.py
apps/process/: models.py  schemas.py  views.py
apps/process/migrations/: 0001_initial.py  0002_alter_foodprocess_food.py  0003_alter_foodprocess_food.py
apps/step/: apps.py  filters.py  models.py  schemas.py  views.py
apps/step/migrations/: 0001_initial.py  0002_alter_foodprocesslinestep_next_step.py  0002_foodprocesslinestep_step_yield.py  0003_alter_foodprocesslinestep_step_yield.py  0003_foodprocesslinestep_enabled.py
contrib/django/core/: asgi.py
contrib/django/core/handlers/: asgi.py
contrib/django/db/: transaction.py
contrib/django/ninja/: errors.py  main.py  pagination.py  parser.py
contrib/django/ninja/openapi/: schema.py
contrib/django/ninja/renderer/: case.py
django_project/: app.py  asgi.py  settings.py  urls.py
